--- a/README.org
+++ b/README.org
@@ -1,70 +1,44 @@
-* CptS 360 / Spring 2023 / Lab 1
+Part 1:
 
-If you're reading this, you've successfully accepted the GitHub
-Classroom assignment and you have a repository set up. The next step
-is to clone it and start working.
+Project Title: MyPrintf
 
-** Cloning
+Project Description:
 
-You can access the clone links on GitHub like this:
+Given: putchar(char c) of Linux, which prints a char.
 
-[[./static/clone.png]]
+  * Wrote my own prints(char *s) function to print a string.
+  * Wrote my own functions
+		  - printx(u32 x) which print x in HEX   (prefixed with 0x )
+      - printd(int x) which print an integer (where x may be negative)
+  * Wrote my own myprintf(char *fmt, ...) function to print 
+         - char by %c
+         - string by %s
+	       - unsigned integer by %u
+         - unsigned integer in HEX by %x
+         - integer by %d
+  * In the int main(int argc, char *argv[ ], char *env[ ]) function, 
+     used myprintf() to print
+         - argc value
+         - argv strings
+         - env  strings
+              
+  * NOTE: This assignment is for 32-bit GCC, which passes parameters on stack.
+  
+  
+Part 2:
 
-I recommend setting up SSH-based authentication for your GitHub
-account because it means you don't have to rely on password-based
-authentication or deal with GitHub's access tokens. You can [[https://docs.github.com/en/authentication/connecting-to-github-with-ssh/adding-a-new-ssh-key-to-your-github-account][add an
-existing key]] or [[https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent][generate a new one]].
+Project Title: Partition Table
 
-If you don't want to use SSH, the alternative is HTTPS. GitHub phased
-out password-based authentication a while back, so if you want to use
-this method you'll have to add a "personal access token". Click your
-profile icon in the upper right and click on settings:
+Project Description: 
 
-[[./static/settings.png]]
+  * Wrote a C progrom to display the partition table of vdisk in:
+      - Linux fdisk 'p' output form for the first 4 partitions
+      - Linux fdisk 'p' output form including ALL the extend partitions 
 
-Then go down to the bottom of the lefthand panel and click on
-developer settings:
 
-[[./static/developer-settings.png]]
 
-Go to ~Tokens (classic)~:
-
-[[./static/tokens-classic.png]]
-
-And generate a classic token:
-
-[[./static/generate-token.png]]
-
-You'll have to check the boxes corresponding to what permissions you
-want available when you use this token.
-
-If you're using SSH then you'll run this command:
-
-#+BEGIN_QUOTE
-git clone git@github.com:CPTS-360-SPRING-2023/Lab1.git
-#+END_QUOTE
-
-If you correctly configured your keys then it should run without any
-prompt.
-
-If you're using HTTPS with a GitHub access token then you'll run this:
-
-#+BEGIN_QUOTE
-git clone https://github.com/CPTS-360-SPRING-2023/Lab1.git
-#+END_QUOTE
-
-Enter your GitHub username and the token that you generated
-earlier. The token is only shown once when it's generated, so you'll
-have to store it somewhere safe if you want to use it multiple
-times. A password manager would be appropriate.
-
-** Assignment Instructions
-
-The instructions are on KC's website [[https://eecs.wsu.edu/~cs360/LAB1.html][here]]. The files in this repo are
-from the ~samples/~ directory [[https://eecs.wsu.edu/~cs360/samples/LAB1/][here]], conveniently divided into part 1
-and part 2 directories. There are also the with the addition of
-~mk.sh~ and ~t.c~ files in each part. To do the assignment you'll edit
-~t.c~ and run ~mk.sh~ to compile your code. After running ~mk.sh~ you
+Instrcutions to run:
+Run ~mk.sh~ to compile your code. After running ~mk.sh~ you
 can run the result with ~./a.out~, or run ~./mk.sh && ./a.out~ to
 automatically compile and run in one command.
 
